syntax = "proto3";

package Common.Proto.Player;
import "Base/NetError.proto";

message InteractRequest {
    int32 entity_id = 1;
}

message InteractResponse {
    Base.NetError error = 1;
    int32 entity_id = 2;
}